HISTORY
=======

History of changes to PHC (name of developer listed in brackets)::

    PloneHelpCenter 1.5
    
    RC 2 (svn/unreleased)
    
    - Unable to add attachments to how-tos. Fixed narrow issue; larger
      problem of actions remains.
      [stevem]
    
    - Expanded referenceable types to include all PHC leaf content types.
      Fixes 114.
      [stevem]
      
    RC 1
    
    - Eggified. [stevem]
    
    Beta 7
    
    - Add link to api.plone.org in list of additional resources. This
      fixes http://dev.plone.org/plone/ticket/7898.
      [vinsci]
    
    Beta 6
    
    - Restored getAudiencesVocab method to PHCFolder. It had been accidentally
      deleted in a recen refactoring. Fixes #93.
      [kteague]
      
    - The latest Archetypes changed the defaults for text fields, creating the
      possibility that content types other than plain text might be allowed 
      for some text-only fields. Fixed by specifying allowable and default
      content types. Fixes #99.
      [kteague]
      
    Beta 5 and earlier
    
    - Remove "statistics" tab from subfolders. I don't know if it
      was ever meant to be there, but it's useless and doesn't work.
      [stevem]
    
    - Move presentation support from PHCFolder.py to browser view.
      [stevem]
    
    - Items without sections were not showing in phcfolder_view.
      [stevem]
    
    - Revise utils.discussionNotify() to use secureSend.
      [stevem]
    
    - Plone 3 doesn't allow discussion of content without dynamic layouts,
      so migrate all the FTIs to dynamic view.
      [stevem]
    
    - Fixed issue #41, Content accessible when container is hidden.
      [stevem]
    
    - Consolidate ad-hoc topic css into stylesheet. (issue #78)
      [stevem]
    
    - Made it possible to use non-ASCII section titles (issues #80, #81, #83).
      [stevem]
    
    - Started building browser support; shifted much of the presentation